# openchess

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: lichess.json  lichess.toml
research/: ARENA.md  LICHESS.md  chesswiki.md  nnue-training.md  openings.md  phase2-engine-plan.md  phase2-nn-last-plan.md  phase2-wave1-research-brief.md  reckless.md  stockfish.md  tasks-phase1.md  tasks.md  uniqueideas.md
scripts/: ci.sh
src/: cli_util.rs  config.rs  history.rs  lib.rs  lookup.rs  main.rs  movepick.rs  threadpool.rs  time.rs  transposition.rs  uci.rs
src/arena/: batch.rs  cli.rs  export.rs  mod.rs  profile.rs  runner.rs  slot.rs  snapshot.rs  watch.rs
src/board/: draw.rs  makemove.rs  mod.rs  movegen.rs  parser.rs  see.rs
src/book/: epd.rs  mini.rs  mod.rs  polyglot.rs  polyglot_random.rs  repertoire.rs
src/chesscom/: cache.rs  cli.rs  client.rs  fetch.rs  mod.rs  url.rs
src/eval/: corrections.rs  hce.rs  mod.rs  pst.rs
src/lichess/: challenge.rs  cli.rs  client.rs  config.rs  events.rs  game.rs  mod.rs  pgn.rs
src/search/: alphabeta.rs  mod.rs  selectivity.rs  stack.rs
src/session/: mod.rs
src/tools/: bench.rs  mod.rs  perft.rs
src/tui/: board_view.rs  classify.rs  engine_panel.rs  eval_bar.rs  game.rs  game_picker.rs  import.rs  input.rs  material.rs  mod.rs  mode_picker.rs  move_list.rs  piece_art.rs  san.rs  session.rs  (+1 more)
testing/: README.md  openbench.json  sprt.sh
tests/: board.rs  fen.rs  lookup.rs  makemove.rs  movegen.rs  perft.rs  see.rs  types.rs
(+29 files in other folders)
