[package]
name = "openchess"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Open-source chess engine"
readme = "README.md"

[lib]
name = "openchess"
path = "src/lib.rs"

[[bin]]
name = "openchess"
path = "src/main.rs"

[[bin]]
name = "openchess-chesscom"
path = "src/bin/chesscom.rs"
required-features = ["chesscom"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", optional = true }

[features]
default = []
chesscom = ["dep:ureq"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
